<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tutorial_pkg</name>
  <version>1.0.0</version>
  <description>Package for Husarion tutorials. This package is end effect after user completes all provided tutorials.</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>frontier_exploration</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>rosbot_description</depend>
  <depend>rosbot_gazebo</depend>
  <depend>depthimage_to_laserscan</depend>
  <depend>gmapping</depend>
  <depend>move_base</depend>
  <depend>find_object_2d</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>