<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tutorial_pkg</name>
  <version>1.0.0</version>

  <description>Package for Husarion tutorials. This package is end effect after user completes all
    provided tutorials.</description>
  <license>Apache License 2.0</license>

  <author email="rafal.gorecki@husarion.com">Rafal Gorecki</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/tutorial_pkg</url>
  <url type="bugtracker">https://github.com/husarion/tutorial_pkg/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tf2</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>find_object_2d</depend>
  <depend>libopencv-dev</depend>
  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>explore_lite</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>